# cellular_automata

./: CNAME  Cargo.toml  asset-manifest.json  index.html
.github/workflows/: deploy.yml
src/: lib.rs  main.rs
static/css/: main.7e87a770.css  main.7e87a770.css.map
static/js/: main.0f4023c4.js  main.0f4023c4.js.map  main.31fd7377.js  main.31fd7377.js.map  main.54a7d9f9.js  main.54a7d9f9.js.map  main.727a6264.js  main.727a6264.js.map  main.b43eafa1.js  main.b43eafa1.js.map  main.ca526045.js  main.ca526045.js.map  main.dfb3d19b.js  main.dfb3d19b.js.map  main.dfecc620.js  main.dfecc620.js.map  main.e8cefcc2.js  main.e8cefcc2.js.map
static/media/: cellular_automata_bg.0145dfe07bd02c87f024.wasm  cellular_automata_bg.f2456c0be6890a687bb4.wasm
ui/: package-lock.json  package.json
ui/src/: App.js
ui/src/components/: RuleSelector.js
