[package]
name = "cellular_automata"
version = "0.1.0"
authors = ["Adam Saeid <adam.saeid@gmail.com>"]
description = "Elementary cellular automata"
license = "MIT/Apache-2.0"
repository = "https://github.com/adamsaeid/cellular-automata"

[lib]
crate-type = ["cdylib"]

[dependencies]
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2"
